# radio_astronomy

./: .gitignore  README.md
analysis/frequency/: CMakeLists.txt  README.md  butter.cpp  butter.h  fir.cpp  fir.h  main.cpp  mixer.cpp  mixer.h  module.cpp  module.h  pipe.cpp  pipe.h  sine.cpp  sine.h
analysis/hamming_ec/: HammingEC.cpp
avr/gpsdo/: CMakeLists.txt  README.md  build.sh  gpsdo.c  gpsdo.h  leds.h  main.c  nop.h  webserver.c  webserver.h
avr/gpsdo/net/: dhcp_client.c  dhcp_client.h  enc28j60.c  ip_config.h  timeout.h
docs/: MasterClock.md  SlaveClock.md
eagle/: README.md  antenna.brd  clk_master.brd  clk_slave.brd  digitizer.brd  eagle.epf  filter.brd  four_layer.dru  lna.brd  patch_antenna.brd  patch_test.brd  pps_rs232.brd  receiver.brd  sdr_rx.brd  test.brd  two_layer.dru
hamming_ec/: CMakeLists.txt  HammingEC.cpp  HammingEC.hpp  README.md  main.cpp
influxdb/: README.md  gpsdo.py  gpsdo.service
ltspice/: README.md  antenna_lna.asc  gpsdo_lowpass.asc  ltc5566_matching_374MHz.asc  micro_filter.asc  poe.asc  slave_clock.asc
xilinx/: fir_250MSps_10MHz_LP_160_points.coe
